--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
 /*----------BUTTONS----------*/
 .button {
   inline-size: 100%;
-  padding: 6px 0;
+  padding: 5px 0;
   background-color: transparent;
   cursor: pointer;
   font-family: "Fira Sans Condensed", sans-serif;
@@ -145,7 +145,7 @@ ol {
   gap: 5px;
 }
 
-.search-form__label:has(:hover) {
+.search-form__label:hover:not(:has(.search-form__textfield)) {
   text-decoration: underline;
 }
 
@@ -171,10 +171,12 @@ ol {
   border-color: rgba(255, 255, 255, 1);
   padding-left: 0;
   min-block-size: 25px;
+  outline: none;
 }
 
 .search-form__textfield:active {
-  outline: 1px solid #fff;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 
 .search-form__checkbox-list {
@@ -189,6 +191,7 @@ ol {
   inline-size: 19px;
   block-size: 19px;
   border: 1px solid rgba(255, 255, 255, 1);
+  margin-top: 1px;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
@@ -247,7 +250,7 @@ ol {
 .content__card-link {
   display: block;
   text-decoration: none;
-  margin: 1px;
+  margin: 2px;
 }
 
 .content__card-link:hover {
@@ -260,6 +263,10 @@ ol {
 
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
 
 .content__card-link_current {
@@ -298,7 +305,6 @@ ol {
   font-size: 18px;
   line-height: 0.9;
   color: #fff;
-  /* margin-top: 6px; */
   /*троеточие при переполнение контента*/
   text-overflow: ellipsis;
   display: -webkit-box;
