--- a/styles/style.css
+++ b/styles/style.css
@@ -213,14 +213,13 @@ ol {
   gap: 22px;
   padding-top: 2px;
   justify-content: start;
-  block-size: inherit;
 }
 
 .content__list {
   position: relative;
   display: flex;
   flex-direction: column;
-  max-height: 298px;
+  block-size: 298px;
   overflow: hidden auto;
 }
 
